--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,5 @@
 .bg-1 {
   position: absolute;
-  overflow: hidden;
   background: url("./images/hikone-sakura.jpg") center center / cover no-repeat fixed;
   z-index: -1;
 }
@@ -34,10 +33,65 @@
   line-height: 2.1em;
 }
 
+.title-3 {
+  width: 100vw;
+  text-align: center;
+  font-size: 5em;
+  font-weight: bold;
+  line-height: 2.1em;
+  color: #fff;
+  padding: 70px 0;
+}
+
+.title-3:before {
+  content: '';
+  position: absolute;
+  width: 120vw;
+  height: 200px;
+  background: #ffcccc;
+  z-index: -1;
+  left: 60vw;
+  -webkit-transform-origin: left top;
+  -ms-transform-origin: left top;
+  transform-origin: left top;
+  -webkit-transform: rotate(3deg) translate(-50%, 0);
+  -ms-transform: rotate(3deg) translate(-50%, 0);
+  transform: rotate(3deg) translate(-50%, 0);
+}
+
+.title-3:after {
+  content: '';
+  position: absolute;
+  width: 120vw;
+  height: 200px;
+  background: #fee;
+  z-index: -2;
+  left: 40vw;
+  -webkit-transform-origin: left top;
+  -ms-transform-origin: left top;
+  transform-origin: left top;
+  -webkit-transform: rotate(-3deg) translate(-50%, 0);
+  -ms-transform: rotate(-3deg) translate(-50%, 0);
+  transform: rotate(-3deg) translate(-50%, 0);
+}
+
 .sub-title-1 {
   font-size: 0.9em;
   color: #994d4d;
   line-height: 1.6em;
+}
+
+.hr-1 {
+  width: 73px;
+  margin: 2.8em auto;
+  background: #ffb3b3;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 928px;
+  padding: 24px;
 }
 
 .preview-container {
@@ -49,7 +103,6 @@
 .preview {
   flex: 1 0 210px;
   position: relative;
-  max-width: 300px;
   margin: 1em 1em;
 }
 
