--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -70,7 +70,7 @@ html, body, #___gatsby, .page-wrapper {
     justify-content: space-around;
     font-size: 11px;
     letter-spacing: 0.3em;
-    color: #ff8080;
+    color: #e56666;
     height: 300px;
   }
 
@@ -648,7 +648,7 @@ html, body, #___gatsby, .page-wrapper {
     transform: rotate(90deg);
     font-size: 0.85em;
     font-weight: bold;
-    background: #ff8080;
+    background: #e56666;
     color: #FFF;
     letter-spacing: 0.1em;
     border-radius: 3px;
