--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -41,7 +41,7 @@ html, body, #___gatsby, .page-wrapper {
       align-items: center;
       align-content: center;
       letter-spacing: 0.2em;
-      font-weight: "bold";
+      font-weight: bold;
       width: 100%;
       div {
         margin: 0 0.3em;
@@ -82,7 +82,7 @@ html, body, #___gatsby, .page-wrapper {
     left: calc(50% - 2.5em);
     top: 450px;
     transform: translate(0, -50%);
-    font-weight: "bolder";
+    font-weight: bold;
 
     .logo-top {
       position: absolute;
@@ -260,7 +260,7 @@ html, body, #___gatsby, .page-wrapper {
     width: 5em;
     height: 5em;
     color: #fff;
-    font-weight: "bolder";
+    font-weight: bold;
 
     .logo-top {
       position: absolute;
