--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -680,3 +680,7 @@ html, body, #___gatsby, .page-wrapper {
   text-decoration: none;
   color: rgba(181,92,92,0.6);
 }
+
+pre {
+  white-space: pre-wrap ;
+}
